<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/toolbar_payment"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:background="@drawable/half_width_rounded_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBackTopUp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tvTopUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity=""
                android:text="@string/top_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTopUp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_payment">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/money"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/top_up_your_balance"
            android:textSize="28sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/half_rounded_layout_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTopUp">

        <LinearLayout
            android:id="@+id/layoutTopUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tvTopUp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_up"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/etTopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:hint="@string/minimum_topup"
            android:padding="14dp"
            android:layout_below="@id/layoutTopUpText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/etTopUp"
            android:layout_toStartOf="@+id/btnSend"
            android:background="@drawable/button_rounded_white"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_rounded_orange"
            android:layout_below="@id/etTopUp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>