<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/broken_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Layout toolbar -->
        <LinearLayout
            android:id="@+id/toolbar_payment"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/half_rounded_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/teks_profile"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:src="@drawable/teks_profile"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="35dp"
                        android:src="@drawable/qr_code"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>

        <!--  Layout untuk input username dan email  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_payment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/your_username"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/edittext_rounded_orange"
                android:hint="@string/id_user"
                android:paddingStart="22dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/edittext_rounded_orange"
                android:hint="@string/email"
                android:paddingStart="22dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/button_rounded_blue"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomNavPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        app:fabCradleMargin="12dp"
        app:fabCradleVerticalOffset="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:menu="@menu/bottom_nav_menu" />

        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:src="@drawable/qr_code_scan"
        app:layout_anchor="@id/bottomNavPayment"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>